--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,3 +89,20 @@
     filter: grayscale(1) opacity(0.6);
 
 }
+
+.buttonA {
+    height: 50px;
+    aspect-ratio: 1;
+    line-height: 30px;
+    font-size: 30px;
+    padding: 10px;
+    background-color: rgb(131, 124, 124);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    position: absolute;
+    bottom: 100px;
+    left: 35%;
+    cursor: pointer;
+}
